[metadata]
name = aioexvhp
version = 0.1.1
url = https://github.com/eXhumer/aioeXVHP
author = eXhumer
author_email = exhumer@exhumer.cc
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE.md
description = Asynchronous Python interface to various video hosting platforms
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = aioexvhp
install_requires =
    aiohttp >= 3.8.0, < 3.9.0
    beautifulsoup4
    boto3

[options.extras_require]
aiohttpspeedups =
    aiohttp[speedups]
awscrt =
    boto3[crt]
